--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,10 @@
 		<a href="http://hud.gov" target="_blank">H.U.D</a>
 		
 		<h3>Contacts</h3>
+		
+		  <!-- map -->
+	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12099.796147209057!2d-74.00655441968532!3d40.697120036272004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY!5e0!3m2!1sen!2sus!4v1546392933705" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+	  <!-- Contact Form -->
       
 	</body>	
 </html>
